@@ -1,3 +1,8 @@
+Sun, 02 Sep 2007 15:01:48 +0200 <thp@perli.net>
+Fix bug with default window title in gPodder window
+
+	* src/gpodder/gui.py: Always set gPodder's default_title attribute
+
 Sun, 02 Sep 2007 14:33:21 +0200 <thp@perli.net>
 Updated Russian translation from Vladimir Zemlyakov
 
